added UI system, event syetm, logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ add_subdirectory(src/vendors/tvk)
 set(SRCS
     src/main.cpp
     src/core/application.cpp
+    src/core/event_system.cpp
+    src/core/logger.cpp
+    src/ui/ui_system.cpp
+    src/ui/layers/menu_bar_layer.cpp
+    src/ui/layers/main_window_layer.cpp
 )
 
 add_executable(sol ${SRCS})
