workspace is docked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ set(SRCS
     src/core/logger.cpp
     src/core/job_system.cpp
     src/ui/ui_system.cpp
-    src/ui/layers/menu_bar_layer.cpp
-    src/ui/layers/main_window_layer.cpp
+    src/ui/layers/menu_bar.cpp
+    src/ui/layers/workspace.cpp
 )
 
 add_executable(sol ${SRCS})
