--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SRCS
     src/ui/ui_system.cpp
     src/ui/layers/menu_bar.cpp
     src/ui/layers/workspace.cpp
+    src/ui/layers/explorer.cpp
 )
 
 add_executable(sol ${SRCS})
