--- a/imgui.ini
+++ b/imgui.ini
@@ -1,13 +1,7 @@
 [Window][##DockSpaceWindow]
 Pos=0,18
-Size=800,558
+Size=800,566
 Collapsed=0
-
-[Window][Workspace]
-Pos=167,18
-Size=633,558
-Collapsed=0
-DockId=0x00000002
 
 [Window][Debug##Default]
 Pos=60,60
@@ -16,12 +10,54 @@ Collapsed=0
 
 [Window][Explorer]
 Pos=0,18
-Size=165,558
+Size=182,566
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
+
+[Window][Buffers]
+ViewportPos=400,348
+ViewportId=0xE484FC87
+Size=171,566
+Collapsed=0
+
+[Window][Open Buffers]
+Pos=189,324
+Size=233,180
+Collapsed=0
+
+[Window][Editor]
+Pos=190,106
+Size=357,281
+Collapsed=0
+
+[Window][float_2]
+ViewportPos=465,355
+ViewportId=0x0E378D7E
+Size=600,400
+Collapsed=0
+
+[Window][float_1]
+ViewportPos=641,288
+ViewportId=0x1D677E8A
+Size=800,278
+Collapsed=0
+
+[Window][##Workspace]
+Pos=184,18
+Size=616,566
+Collapsed=0
+DockId=0x00000002
+
+[Window][float_3]
+Pos=0,303
+Size=123,281
+Collapsed=0
+DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace   ID=0xEE6D716C Window=0xF7450892 Pos=356,163 Size=800,558 Split=X Selected=0x9C5B1D82
-  DockNode  ID=0x00000001 Parent=0xEE6D716C SizeRef=165,558 Selected=0x00F0E82E
-  DockNode  ID=0x00000002 Parent=0xEE6D716C SizeRef=633,558 CentralNode=1 Selected=0x9C5B1D82
+DockSpace     ID=0xEE6D716C Window=0xF7450892 Pos=356,163 Size=800,566 Split=X
+  DockNode    ID=0x00000001 Parent=0xEE6D716C SizeRef=182,566 Split=Y Selected=0x00F0E82E
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=123,283 Selected=0x00F0E82E
+    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=123,281 Selected=0x19C9436E
+  DockNode    ID=0x00000002 Parent=0xEE6D716C SizeRef=616,566 CentralNode=1 Selected=0x4AC8AA79
 
